--- a/aibio/aibio.csproj
+++ b/aibio/aibio.csproj
@@ -43,9 +43,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Biopart.cs" />
+    <Compile Include="ContactSensor.cs" />
     <Compile Include="Motor.cs" />
     <Compile Include="Organism.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangedSensor.cs" />
     <Compile Include="Sensor.cs" />
     <Compile Include="WorldView.cs">
       <SubType>UserControl</SubType>
