--- a/ainet/ainet.csproj
+++ b/ainet/ainet.csproj
@@ -48,6 +48,10 @@
       <HintPath>..\packages\Accord.Neuro.3.5.0\lib\net45\Accord.Neuro.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Accord.Statistics, Version=3.5.0.0, Culture=neutral, PublicKeyToken=fa1a88e29555ccf7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Accord.Statistics.3.5.0\lib\net45\Accord.Statistics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
