--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ mono:
   - latest
 script:
   - xbuild /p:Configuration=Release aivolution.sln
-  - mono ./packages/NUnit.Runners.*/tools/nunit-console.exe ./aibio.Tests/bin/Release/aibio.Tests.dll
-  - mono ./packages/NUnit.Runners.*/tools/nunit-console.exe ./aibio.Tests/bin/Release/ainet.Tests.dll
+  - mono ./packages/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./aibio.Tests/bin/Release/aibio.Tests.dll
+  - mono ./packages/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./aibio.Tests/bin/Release/ainet.Tests.dll
