--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ mono:
 script:
   - xbuild /p:Configuration=Release aivolution.sln
   - mono ./packages/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./aibio.Test/bin/Release/aibio.Test.dll
-  - mono ./packages/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./aibio.Test/bin/Release/ainet.Test.dll
+  - mono ./packages/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./ainet.Test/bin/Release/ainet.Test.dll
