--- a/aibio.Test/aibio.Test.csproj
+++ b/aibio.Test/aibio.Test.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,8 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="MotorTests.cs" />
+    <Compile Include="OrganismTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SensorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
